--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,22 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
-  </div>
 
+  </div>
+<div id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+this.page.url = '{{ site.url }}{{ site.baseurl }}{{ page.url }}';
+this.page.identifier = '{{page.url}}';
+};
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//minimo-blog.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </article>
